[gd_scene load_steps=3 format=3 uid="uid://oyyukfogdh74"]

[ext_resource type="Script" uid="uid://i8ykqg5sglwq" path="res://scripts/desert.gd" id="1_1v2dw"]
[ext_resource type="Texture2D" uid="uid://di44og0dmj7p2" path="res://sprites/background/desert_0003_Layer-4.png" id="2_cyhdl"]

[node name="Desert" type="ParallaxBackground"]
script = ExtResource("1_1v2dw")

[node name="SkyLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(200, 0)

[node name="ColorRect" type="ColorRect" parent="SkyLayer"]
offset_right = 200.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(0.96862745, 0.6666667, 0.38431373, 1)

[node name="DunesBackLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(150, 0)

[node name="Desert0003Layer4" type="Sprite2D" parent="DunesBackLayer"]
modulate = Color(0.81960785, 0.44705883, 0.3764706, 1)
position = Vector2(75, 36)
scale = Vector2(0.038987592, 0.03898758)
texture = ExtResource("2_cyhdl")

[node name="DunesFrontLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.8, 1)
motion_mirroring = Vector2(100, 0)

[node name="Desert0003Layer4" type="Sprite2D" parent="DunesFrontLayer"]
modulate = Color(0.4745098, 0.30980393, 0.31764707, 1)
position = Vector2(49.999996, 41)
scale = Vector2(0.026139311, 0.026139306)
texture = ExtResource("2_cyhdl")

[node name="VegetationLayer" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(59, 0)

[node name="ColorRect" type="ColorRect" parent="VegetationLayer"]
offset_top = 32.0
offset_right = 59.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(0.21960784, 0.2, 0.1882353, 1)
